--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/04/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Ukraine</b><br>Cause of death: <b>reportedly drowned in the Oder River on Polish-German border near Lebus (DE)</b><br>Source: German Government<br>
+Found dead: <b>02/05/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 16)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>stowaway, suffocated in truck going from Greece to Venice (IT) while hiding to avoid border checks</b><br>Source: Migreurop/PICUM/AdnK/MP<br>
 
 <br>
 
