--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/11/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Huseyin Maden (man, 40)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>found dead on beach of Lesbos (GR); was teacher fleeing persecution in Turkey</b><br>Source: GulfToday/RTBF/TurkeyPurge<br>
+Found dead: <b>16/08/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Jasraj Singh Kataria (23 months)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>fell from 3rd floor window of poor accommodation in Glasgow (GB) provided by government contractor</b><br>Source: IRR<br>
 
 <br>
 
