--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/08/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Joy Gardner (woman, 40)</b><br>Region of origin: <b>Jamaica</b><br>Cause of death: <b>died of brain damage after struggle with immigration officials in her flat in London (GB)</b><br>Source: IRR/MNS/Times/Independent/ST/NCADC/BBC<br>
+Found dead: <b>Jan 97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Vasyl Balakin (man, 26)</b><br>Region of origin: <b>Ukraine</b><br>Cause of death: <b>suicide, hanged himself from scaffolding in Trieste (IT) after receiving expulsion order</b><br>Source: IRR<br>
 
 <br>
 
