--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/04/16</b><br>Number of person: <b>84</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>West Africa</b><br>Cause of death: <b>reportedly missing after ship travelling to Italy sank off coast of Libya</b><br>Source: AFP/IOM/Libération Maroc<br>
+Found dead: <b>15/04/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Eliud Nguli Nyenze (man, 40)</b><br>Region of origin: <b>Kenya</b><br>Cause of death: <b>died after being denied medical attention at Oakington immigration reception centre (GB)</b><br>Source: GuardianUn./IndyMedia/MornStar/IRR<br>
 
 <br>
 
