--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/11/99</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 women)</b><br>Region of origin: <b>Moldova</b><br>Cause of death: <b>drowned after small boat sank near Brindisi (IT) while trying to reach Italy</b><br>Source: AFP/taz/ILM/FECL<br>
+Found dead: <b>21/08/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Mali</b><br>Cause of death: <b>drowned in shipwreck near Fuerteventura (ES), body found in Los Pajaritos (ES)</b><br>Source: ELM/GRP/ANA/MUGAK/LOP<br>
 
 <br>
 
