--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/09/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Darius Witek (man, 39)</b><br>Region of origin: <b>Poland</b><br>Cause of death: <b>suicide, reportedly hanged himself with trouser string while in detention at "Foreigners' Guesthouse" in Istanbul (TR)</b><br>Source: bianet/babelmed<br>
+Found dead: <b>01/08/06</b><br>Number of person: <b>28</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned trying to reach Canary Islands (ES), bodies washed up near coast of Blibilat, Laayoune (EH)</b><br>Source: ELM/FE/BBC/TS/ST/NOB/APDHA<br>
 
 <br>
 
