--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/08/06</b><br>Number of person: <b>28</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned trying to reach Canary Islands (ES), bodies washed up near coast of Blibilat, Laayoune (EH)</b><br>Source: ELM/FE/BBC/TS/ST/NOB/APDHA<br>
+Found dead: <b>Feb 95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Zinaida Mitzofanova (woman, 63)</b><br>Region of origin: <b>Latvia</b><br>Cause of death: <b>suicide, in County Durham (GB) out of fear of deportation</b><br>Source: Independent/NCRM/IRR<br>
 
 <br>
 
