--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Feb 95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Zinaida Mitzofanova (woman, 63)</b><br>Region of origin: <b>Latvia</b><br>Cause of death: <b>suicide, in County Durham (GB) out of fear of deportation</b><br>Source: Independent/NCRM/IRR<br>
+Found dead: <b>28/05/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Azrar Ayub (man, 24)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died alone in psychiatric custody in Prestwich hospital (GB) after being sedated and restrained by hospital staff</b><br>Source: IRR<br>
 
 <br>
 
