--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jan 99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Savas Cicek (man)</b><br>Region of origin: <b>Kurdistan-Turkey</b><br>Cause of death: <b>killed in suspicious circumstances among Turkish army after deportation from the Netherlands, conscientious objector</b><br>Source: MNS/Fabel van de Illegaal/Nederlands Dagblad<br>
+Found dead: <b>Jan 97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Tarek Ben Abdelatif Refgui (m, 27)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>died of head injuries while trying to land in Lampedusa (IT) with group of refugees</b><br>Source: ILM/IRR<br>
 
 <br>
 
