--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jan 15</b><br>Number of person: <b>15</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in shipwreck off Ayvalik, county of Balikesir (TR); 40 rescued</b><br>Source: Imkander<br>
+Found dead: <b>02/06/16</b><br>Number of person: <b>117</b><br>Name, gender, age: <b>N.N. (6 children; 75 women; 36 m)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned trying to reach Italy by boat, bodies washed up near Zuwara (LY)</b><br>Source: LibyaRedCrescent/MigrantReport/GuardianUn.<br>
 
 <br>
 
