--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/07/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ibrahim A.</b><br>Region of origin: <b>Kurdistan-Turkey</b><br>Cause of death: <b>reportedly dead, disappeared after being deported from Germany to Turkey</b><br>Source: ARI<br>
+Found dead: <b>10/07/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned near Fuerteventura (ES) trying to enter Spain (ES)</b><br>Source: EP<br>
 
 <br>
 
