--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/12/06</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died trying to reach Canary Islands (ES), boat found near coast of Morocco</b><br>Source: APDHA<br>
+Found dead: <b>08/01/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman, 27)</b><br>Region of origin: <b>Serbia</b><br>Cause of death: <b>died in a fire caused by arson attack on refugee centre in Mellendorf near Hannover (DE)</b><br>Source: GuardianUn./taz/ARI/ZAG<br>
 
 <br>
 
