--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/12/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (girl)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead on board boat that was rescued between the Turkish coast and Lesbos (GR); 76 rescued</b><br>Source: Watch TheMed<br>
+Found dead: <b>13/02/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Fahrettin Dogan (man, 29)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>missing after boat sunk in the Evros River on Turkish-Greek border; was fleeing post-coup crackdown in Turkey</b><br>Source: Reu./TDEMD/IOM Turkey/TurkeyPurge/TRMinute<br>
 
 <br>
 
