--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/07/16</b><br>Number of person: <b>22</b><br>Name, gender, age: <b>N.N. (21 women; 1 man)</b><br>Region of origin: <b>Nigeria, Ghana, Mali, Ivory C</b><br>Cause of death: <b>drowned or crushed in rubber boat carrying at least 230 people from Libya to Italy</b><br>Source: Le Monde<br>
+Found dead: <b>12/07/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died in the Mediterranean Sea while trying to reach Italy from North Africa</b><br>Source: Watch TheMed<br>
 
 <br>
 
