--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/11/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>went missing after falling into the sea during rescue operation 9 miles from Lampedusa (IT)</b><br>Source: FE/AdnK/UnSarda/LS/NOB<br>
+Found dead: <b>09/09/06</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N. (3 children; 4 women; 10 men)</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>died of starvation on ship drifting between Libya and Italy</b><br>Source: FE/agrigentoweb<br>
 
 <br>
 
