--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/09/06</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N. (3 children; 4 women; 10 men)</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>died of starvation on ship drifting between Libya and Italy</b><br>Source: FE/agrigentoweb<br>
+Found dead: <b>01/12/95</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>missing after boat capsized near Santa Cesarea Terme (IT)</b><br>Source: VK/IRR/ILM/CDS/FECL<br>
 
 <br>
 
