--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/05/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 25)</b><br>Region of origin: <b>Former Yugoslavia</b><br>Cause of death: <b>died of severe burns after a fire in asylum centre in Werdau (DE)</b><br>Source: ARI<br>
+Found dead: <b>19/11/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ibrahim Kante</b><br>Region of origin: <b>Guinea</b><br>Cause of death: <b>disappeared and presumed dead after being deported from Büren (DE) to Ghana</b><br>Source: ARI<br>
 
 <br>
 
