--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/11/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ibrahim Kante</b><br>Region of origin: <b>Guinea</b><br>Cause of death: <b>disappeared and presumed dead after being deported from Büren (DE) to Ghana</b><br>Source: ARI<br>
+Found dead: <b>14/12/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 17)</b><br>Region of origin: <b>Afghanistan, Iraq</b><br>Cause of death: <b>drowned when boat from Turkey sank near Lesbos (GR); 2 rescued</b><br>Source: Aljazeera/Reu./PICUM/MSF/Infomob/MNS/jW<br>
 
 <br>
 
