--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/03/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Tahsin Esen (man, 22)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>blown up in minefield near the Evros River (GR) trying to cross Turkish-Greek border</b><br>Source: MNS/Vivre/HRFT/AP<br>
+Found dead: <b>07/03/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, suffocated in Valencia (ES) on ship that had arrived from Ivory Coast</b><br>Source: EP/Egin/Diario/ST<br>
 
 <br>
 
