--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/09/12</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N. (1 child; 5 women)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat from Comoros carrying 36 migrants sank off coast of Mayotte (FR)</b><br>Source: Universal/AFP/PICUM<br>
+Found dead: <b>20/12/03</b><br>Number of person: <b>51</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Jordan, Iraq, Iran, Afghanist</b><br>Cause of death: <b>reportedly drowned after boat sank off coast of Turkey on way to Greece</b><br>Source: MNS/AP/SP/Kurier/Vielfaltletter/BBC/MUGAK/IMK<br>
 
 <br>
 
