--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/12/03</b><br>Number of person: <b>51</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Jordan, Iraq, Iran, Afghanist</b><br>Cause of death: <b>reportedly drowned after boat sank off coast of Turkey on way to Greece</b><br>Source: MNS/AP/SP/Kurier/Vielfaltletter/BBC/MUGAK/IMK<br>
+Found dead: <b>30/04/00</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly drowned after ship sank near Cádiz (ES)</b><br>Source: Diario de Navarra<br>
 
 <br>
 
