--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/03/01</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (7 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned while travelling to Spain, bodies found near Tarifa (ES)</b><br>Source: GARA<br>
+Found dead: <b>19/04/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Orhan B. (man)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>suicide, second attempt, hanged himself in Hamburg (DE) prison out of fear of deportation</b><br>Source: jW/taz/EPP<br>
 
 <br>
 
