--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/12/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±28)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>froze to death, bodies found in Nea Vissa (GR), near Turkish-Greek border</b><br>Source: Frontexplode/MNS<br>
+Found dead: <b>16/12/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>fell into water when he tried to climb a cliff after boat was stranded in Tangiers harbour (MA)</b><br>Source: Watch TheMed<br>
 
 <br>
 
