--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/09/08</b><br>Number of person: <b>13</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>bodies thrown overboard during trip from Libya to Portopalo, Sicily (IT)</b><br>Source: RAI/FE/NOB<br>
+Found dead: <b>02/05/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mengs Medhane (boy, 16)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>stowaway, died after falling off truck in Calais (FR) on way to Great Britain</b><br>Source: CMS<br>
 
 <br>
 
