--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/12/10</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>froze to death, bodies found in Nea Vissa (GR), near Turkish-Greek border</b><br>Source: Frontexplode/MNS<br>
+Found dead: <b>Jul 01</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>reportedly drowned after small vessel struggled to stay afloat then sank near Almería (ES)</b><br>Source: MNS<br>
 
 <br>
 
