--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/08/10</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found off coast of the Spanish enclave of Ceuta (ES), believed to have been thrown off boats months earlier</b><br>Source: MAC<br>
+Found dead: <b>12/12/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan</b><br>Cause of death: <b>stowaway, suffocated on cargo ship travelling from Cameroon to Spain</b><br>Source: MNS/ST<br>
 
 <br>
 
