--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/05/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (20)</b><br>Region of origin: <b>Iran</b><br>Cause of death: <b>found dead in wheel bay of Iranian airplane at Tehran Airport (IR)</b><br>Source: Reu.<br>
+Found dead: <b>10/07/01</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>India</b><br>Cause of death: <b>drowned near southern coast of Sicily (IT), reportedly thrown overboard by traffickers</b><br>Source: MNS/NW/DPA/Vita/TL<br>
 
 <br>
 
