--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/07/01</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>India</b><br>Cause of death: <b>drowned near southern coast of Sicily (IT), reportedly thrown overboard by traffickers</b><br>Source: MNS/NW/DPA/Vita/TL<br>
+Found dead: <b>02/04/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 30)</b><br>Region of origin: <b>Chechnya</b><br>Cause of death: <b>stabbed by drunk asylum seeker using bread knife at asylum centre in Mostviertel (AT)</b><br>Source: DerStandard/Salzburger Nachrichten<br>
 
 <br>
 
